--- a/Framework/Process.xaml
+++ b/Framework/Process.xaml
@@ -7,7 +7,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1131,2525</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1131,2485</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ProcessTransaction_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="50">
@@ -432,7 +432,7 @@
             <av:PointCollection x:Key="ConnectorLocation">491.641666666667,210.54 491.641666666667,260.54</av:PointCollection>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-        <Sequence DisplayName="Gymnaseskola Get XML data" sap:VirtualizedContainerService.HintSize="200,81" sap2010:WorkflowViewState.IdRef="Sequence_3">
+        <Sequence DisplayName="Gymnaseskola Get XML data" sap:VirtualizedContainerService.HintSize="1139,4416" sap2010:WorkflowViewState.IdRef="Sequence_3">
           <Sequence.Variables>
             <Variable x:TypeArguments="sxl:XNamespace" Default="[&quot;http://www.oeplatform.org/version/2.0/schemas/flowinstance&quot;]" Name="FlowInstance" />
             <Variable x:TypeArguments="x:Boolean" Name="ApplyingForMyself" />
@@ -466,18 +466,18 @@
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
           </ui:MultipleAssign>
-          <Sequence DisplayName="Who is applying?" sap:VirtualizedContainerService.HintSize="1077,793" sap2010:WorkflowViewState.IdRef="Sequence_81">
+          <Sequence DisplayName="Who is applying?" sap:VirtualizedContainerService.HintSize="1077,80" sap2010:WorkflowViewState.IdRef="Sequence_81">
             <Sequence.Variables>
               <Variable x:TypeArguments="x:String" Name="NodePath" />
               <Variable x:TypeArguments="x:String" Name="Key" />
             </Sequence.Variables>
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                <x:Boolean x:Key="IsExpanded">False</x:Boolean>
                 <x:Boolean x:Key="IsPinned">False</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Assign sap:VirtualizedContainerService.HintSize="434,81" sap2010:WorkflowViewState.IdRef="Assign_168">
+            <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_168">
               <Assign.To>
                 <OutArgument x:TypeArguments="x:String">[Key]</OutArgument>
               </Assign.To>
@@ -485,7 +485,7 @@
                 <InArgument x:TypeArguments="x:String">Ansöker för</InArgument>
               </Assign.Value>
             </Assign>
-            <Assign DisplayName="Assign - NodePath" sap:VirtualizedContainerService.HintSize="434,81" sap2010:WorkflowViewState.IdRef="Assign_29">
+            <Assign DisplayName="Assign - NodePath" sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_29">
               <Assign.To>
                 <OutArgument x:TypeArguments="x:String">[NodePath]</OutArgument>
               </Assign.To>
@@ -522,14 +522,14 @@
               </Assign.Value>
             </Assign>
           </Sequence>
-          <Sequence DisplayName="Växelvisadress?" sap:VirtualizedContainerService.HintSize="1077,80" sap2010:WorkflowViewState.IdRef="Sequence_237">
+          <Sequence DisplayName="Växelvisadress?" sap:VirtualizedContainerService.HintSize="1077,468" sap2010:WorkflowViewState.IdRef="Sequence_237">
             <Sequence.Variables>
               <Variable x:TypeArguments="x:String" Name="NodePath" />
               <Variable x:TypeArguments="x:String" Name="WhosAdress" />
             </Sequence.Variables>
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 <x:Boolean x:Key="IsPinned">False</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
@@ -4790,11 +4790,11 @@
                                                 <av:PointCollection x:Key="ConnectorLocation">500,1181.5 500,1211.5 498.141666666667,1211.5 498.141666666667,1231.5</av:PointCollection>
                                               </scg:Dictionary>
                                             </sap:WorkflowViewStateService.ViewState>
-                                            <Sequence DisplayName="Check if case is valid" sap:VirtualizedContainerService.HintSize="200,81" sap2010:WorkflowViewState.IdRef="Sequence_152">
+                                            <Sequence DisplayName="Check if case is valid" sap:VirtualizedContainerService.HintSize="730,4492" sap2010:WorkflowViewState.IdRef="Sequence_152">
                                               <Sequence.Variables>
                                                 <Variable x:TypeArguments="s:String[]" Name="FilterApprovedCases" />
-                                                <Variable x:TypeArguments="x:String" Name="ColumnAndKeyNameForSSN" />
-                                                <Variable x:TypeArguments="x:String" Name="ColumnAndKeyNameForVH" />
+                                                <Variable x:TypeArguments="x:String" Name="ColumnAndKeyNameForStudentSSN" />
+                                                <Variable x:TypeArguments="x:String" Name="ColumnAndKeyNameForVHSSN" />
                                                 <Variable x:TypeArguments="x:String" Name="ColumnAndKeyNameForHomeAdress" />
                                                 <Variable x:TypeArguments="x:String" Name="StudentAdress" />
                                                 <Variable x:TypeArguments="x:String" Name="VHCitizenID" />
@@ -4813,7 +4813,7 @@
                                                   <scg:List x:TypeArguments="ui:AssignOperation" Capacity="8">
                                                     <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_24">
                                                       <ui:AssignOperation.To>
-                                                        <OutArgument x:TypeArguments="x:String">[ColumnAndKeyNameForSSN]</OutArgument>
+                                                        <OutArgument x:TypeArguments="x:String">[ColumnAndKeyNameForStudentSSN]</OutArgument>
                                                       </ui:AssignOperation.To>
                                                       <ui:AssignOperation.Value>
                                                         <InArgument x:TypeArguments="x:String">Personnummer (Elev)</InArgument>
@@ -4821,7 +4821,7 @@
                                                     </ui:AssignOperation>
                                                     <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_25">
                                                       <ui:AssignOperation.To>
-                                                        <OutArgument x:TypeArguments="x:String">[ColumnAndKeyNameForVH]</OutArgument>
+                                                        <OutArgument x:TypeArguments="x:String">[ColumnAndKeyNameForVHSSN]</OutArgument>
                                                       </ui:AssignOperation.To>
                                                       <ui:AssignOperation.Value>
                                                         <InArgument x:TypeArguments="x:String">Personnummer (VH)</InArgument>
@@ -4848,7 +4848,7 @@
                                                         <OutArgument x:TypeArguments="x:String">[StudentAdress]</OutArgument>
                                                       </ui:AssignOperation.To>
                                                       <ui:AssignOperation.Value>
-                                                        <InArgument x:TypeArguments="x:String">[CaseInformation("Primär Gatuadress").ToString]</InArgument>
+                                                        <InArgument x:TypeArguments="x:String">[if(Växelvisadress, CaseInformation("Växelvis Gatuadress").ToString ,CaseInformation("Primär Gatuadress").ToString)]</InArgument>
                                                       </ui:AssignOperation.Value>
                                                     </ui:AssignOperation>
                                                     <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_29">
@@ -4856,7 +4856,7 @@
                                                         <OutArgument x:TypeArguments="x:String">[VHCitizenID]</OutArgument>
                                                       </ui:AssignOperation.To>
                                                       <ui:AssignOperation.Value>
-                                                        <InArgument x:TypeArguments="x:String">[CaseInformation(ColumnAndKeyNameForVH).ToString]</InArgument>
+                                                        <InArgument x:TypeArguments="x:String">[CaseInformation(ColumnAndKeyNameForVHSSN).ToString]</InArgument>
                                                       </ui:AssignOperation.Value>
                                                     </ui:AssignOperation>
                                                     <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_36">
@@ -5053,10 +5053,10 @@
                                                   </Sequence>
                                                 </If.Else>
                                               </If>
-                                              <If Condition="[CaseNoLongerValid.Equals(False) AndAlso&#xD;&#xA;CaseIsNOTApprovedDecisionText.Equals(False) AndAlso&#xD;&#xA;CaseIsNoLongerValidTooOld.Equals(False)]" DisplayName="If - Date is still valid and was approved" sap:VirtualizedContainerService.HintSize="668,25" sap2010:WorkflowViewState.IdRef="If_106">
+                                              <If Condition="[CaseNoLongerValid.Equals(False) AndAlso&#xD;&#xA;CaseIsNOTApprovedDecisionText.Equals(False) AndAlso&#xD;&#xA;CaseIsNoLongerValidTooOld.Equals(False)]" DisplayName="If - Date is still valid and was approved" sap:VirtualizedContainerService.HintSize="668,3162" sap2010:WorkflowViewState.IdRef="If_106">
                                                 <sap:WorkflowViewStateService.ViewState>
                                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                                    <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                                                    <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                     <x:Boolean x:Key="IsPinned">False</x:Boolean>
                                                   </scg:Dictionary>
                                                 </sap:WorkflowViewStateService.ViewState>
@@ -5113,9 +5113,9 @@
                                                           <ui:FilterDataTable DataTable="[dt_FilterOnlyApproved]" DisplayName="Filter Data Table - dt_StudentAndVH" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="334,161" sap2010:WorkflowViewState.IdRef="FilterDataTable_3" OutputDataTable="[dt_StudentAndVH]" SelectColumnsMode="Remove">
                                                             <ui:FilterDataTable.Filters>
                                                               <scg:List x:TypeArguments="ui:FilterOperationArgument" Capacity="4">
-                                                                <ui:FilterOperationArgument BooleanOperator="And" Operator="CONTAINS">
+                                                                <ui:FilterOperationArgument BooleanOperator="And" Operator="EQ">
                                                                   <ui:FilterOperationArgument.Column>
-                                                                    <InArgument x:TypeArguments="x:String">[ColumnAndKeyNameForSSN]</InArgument>
+                                                                    <InArgument x:TypeArguments="x:String">[ColumnAndKeyNameForStudentSSN]</InArgument>
                                                                   </ui:FilterOperationArgument.Column>
                                                                   <ui:FilterOperationArgument.Operand>
                                                                     <InArgument x:TypeArguments="x:String">[StudentCitizenID]</InArgument>
@@ -5123,7 +5123,7 @@
                                                                 </ui:FilterOperationArgument>
                                                                 <ui:FilterOperationArgument BooleanOperator="And" Operator="CONTAINS">
                                                                   <ui:FilterOperationArgument.Column>
-                                                                    <InArgument x:TypeArguments="x:String">[ColumnAndKeyNameForVH]</InArgument>
+                                                                    <InArgument x:TypeArguments="x:String">[ColumnAndKeyNameForVHSSN]</InArgument>
                                                                   </ui:FilterOperationArgument.Column>
                                                                   <ui:FilterOperationArgument.Operand>
                                                                     <InArgument x:TypeArguments="x:String">[VHCitizenID]</InArgument>
@@ -5198,7 +5198,7 @@
                                                                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                                           </scg:Dictionary>
                                                                         </sap:WorkflowViewStateService.ViewState>
-                                                                        <If Condition="[CurrentRow(ColumnAndKeyNameForSSN).ToString.Equals(CaseInformation(ColumnAndKeyNameForSSN).ToString) AndAlso&#xA;CurrentRow(ColumnAndKeyNameForVH).ToString.Equals(CaseInformation(ColumnAndKeyNameForVH).ToString)]" DisplayName="If - Person + Parent already exsists in file" sap:VirtualizedContainerService.HintSize="512,557" sap2010:WorkflowViewState.IdRef="If_84">
+                                                                        <If Condition="[CurrentRow(ColumnAndKeyNameForStudentSSN).ToString.Equals(CaseInformation(ColumnAndKeyNameForStudentSSN).ToString) AndAlso&#xA;CurrentRow(ColumnAndKeyNameForVHSSN).ToString.Equals(CaseInformation(ColumnAndKeyNameForVHSSN).ToString)]" DisplayName="If - Person + Parent already exsists in file" sap:VirtualizedContainerService.HintSize="512,557" sap2010:WorkflowViewState.IdRef="If_84">
                                                                           <sap:WorkflowViewStateService.ViewState>
                                                                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                                                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -5287,13 +5287,13 @@
                                                               <scg:List x:TypeArguments="ui:FilterOperationArgument" Capacity="4">
                                                                 <ui:FilterOperationArgument BooleanOperator="And" Operator="EQ">
                                                                   <ui:FilterOperationArgument.Column>
-                                                                    <InArgument x:TypeArguments="x:String">[ColumnAndKeyNameForSSN]</InArgument>
+                                                                    <InArgument x:TypeArguments="x:String">[ColumnAndKeyNameForStudentSSN]</InArgument>
                                                                   </ui:FilterOperationArgument.Column>
                                                                   <ui:FilterOperationArgument.Operand>
                                                                     <InArgument x:TypeArguments="x:String">[StudentCitizenID]</InArgument>
                                                                   </ui:FilterOperationArgument.Operand>
                                                                 </ui:FilterOperationArgument>
-                                                                <ui:FilterOperationArgument BooleanOperator="And" Operator="CONTAINS">
+                                                                <ui:FilterOperationArgument BooleanOperator="Or" Operator="CONTAINS">
                                                                   <ui:FilterOperationArgument.Column>
                                                                     <InArgument x:TypeArguments="x:String">[ColumnAndKeyNameForHomeAdress]</InArgument>
                                                                   </ui:FilterOperationArgument.Column>
@@ -5467,9 +5467,9 @@
                                                           <ui:FilterDataTable DataTable="[dt_FilterOnlyApproved]" DisplayName="Filter Data Table - Student ID" FilterRowsMode="Keep" sap:VirtualizedContainerService.HintSize="512,161" sap2010:WorkflowViewState.IdRef="FilterDataTable_5" OutputDataTable="[dt_OnlyStudentID]" SelectColumnsMode="Remove">
                                                             <ui:FilterDataTable.Filters>
                                                               <scg:List x:TypeArguments="ui:FilterOperationArgument" Capacity="4">
-                                                                <ui:FilterOperationArgument BooleanOperator="And" Operator="CONTAINS">
+                                                                <ui:FilterOperationArgument BooleanOperator="And" Operator="EQ">
                                                                   <ui:FilterOperationArgument.Column>
-                                                                    <InArgument x:TypeArguments="x:String">[ColumnAndKeyNameForSSN]</InArgument>
+                                                                    <InArgument x:TypeArguments="x:String">[ColumnAndKeyNameForStudentSSN]</InArgument>
                                                                   </ui:FilterOperationArgument.Column>
                                                                   <ui:FilterOperationArgument.Operand>
                                                                     <InArgument x:TypeArguments="x:String">[StudentCitizenID]</InArgument>
@@ -5710,7 +5710,7 @@
                                                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                                         </scg:Dictionary>
                                                       </sap:WorkflowViewStateService.ViewState>
-                                                      <Assign sap:VirtualizedContainerService.HintSize="434,81" sap2010:WorkflowViewState.IdRef="Assign_184">
+                                                      <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_184">
                                                         <Assign.To>
                                                           <OutArgument x:TypeArguments="x:String">[CaseInformation("Ärende giltigt")]</OutArgument>
                                                         </Assign.To>
